Update JacksonFindValueUnitTest.java